# xbeepocs

./: .gitignore
cmakeTutorial/: CMakeLists.txt  tutorial.cpp
cmakeTutorial/print_functions/: CMakeLists.txt  goodbye_world.cpp  goodbye_world.h  hello_world.cpp  hello_world.h
libraries/xbee_ansic_library/: CMakeLists.txt  README.md
libraries/xbee_ansic_library/include/xbee/: device.h
libraries/xbee_ansic_library/samples/common/: common.mk
libraries/xbee_ansic_library/samples/posix/: my_transmitter.c  xbee_term_posix.c
libraries/xbee_ansic_library/src/xbee/: xbee_device.c  xbee_wpan.c
libraries/xbee_ansic_library/test/dos/: t_jslong.tgt  test.wpj
libraries/xbee_ansic_library/test/hcs08/Shared/: BL032.abs.s19  BL032_Debug.abs.s19
libraries/xbee_ansic_library/test/hcs08/t_jslong/: C_Layout.hwl  t_jslong.mcp
libraries/xbee_ansic_library/test/hcs08/t_jslong/prm/: Project.prm  burner.bbl
notes/: NOTES.txt
testBidirectional/: Makefile  gen_messages.py  random_text.txt  reciever.c  transmitter.c
testBidirectionalSingleMsg/: Makefile  reciever.c  transmitter.c
testCMakeCompile/: CMakeLists.txt  my_transmitter.cpp
testConfigureXbee/: Makefile  configureXbee  configureXbee.c  note.txt  serial_port_config.h  xbee_baja_config.h  xbee_baja_init.c  xbee_baja_init.h  xbee_init_funcs.c  xbee_init_funcs.h
testCrossCompile/: Makefile  my_transmitter.cpp
testDefineDispatchTableLive/: Makefile  my_transmitter  my_transmitter.cpp
testUnidirectionalMultiMsg/: Makefile  looping_transmitter.c
testUnidirectionalSingleMsg/: Makefile  my_transmitter.c
unidirectionalTest/: Makefile  NOTES.txt  receiver  receiver.cpp  source_data.txt  transmitter  transmitter.cpp
